tests/ui/rfcs/rfc-1623-static/rfc1623-2.stderr
error[E0308]: mismatched types
  --> $DIR/rfc1623-2.rs:28:8
   |
LL |     f: &id,
   |        ^^^ expected `&dyn Fn(&Foo<'b>) -> &Foo<'_>`, found `&fn(&Foo<'_>) -> &Foo<'_> {id::<&...>}`
   |
   = note: expected reference `&dyn for<'a, 'b> Fn(&'a Foo<'b>) -> &'a Foo<'b>`
              found reference `&fn(&Foo<'_>) -> &Foo<'_> {id::<&Foo<'_>>}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
